# hermes-qdrant-rag

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bootstrap.sh  docker-compose.yml  embeddings.py  index_state.py  ingest.py  pyproject.toml  rag_mcp.py  technical-spec.md  vectorize.py
Context/: README.md
docs/: deployment.md
scripts/: agent-bootstrap.sh  warm_embedding_model.py
skills/rag-deploy/: SKILL.md
skills/rag_search/: SKILL.md
skills/rag_update/: SKILL.md
tests/: test_embeddings.py  test_index_state.py  test_ingest.py  test_rag_mcp.py  test_vectorize.py
